fix: small gap main layout under 650px

--- a/src/styles/main-layout.css
+++ b/src/styles/main-layout.css
@@ -2,7 +2,11 @@
   display: flex;
   flex-direction: row;
   margin: 1rem;
-  gap: 1rem;
+  gap: 5rem;
+
+  @media screen and (max-width: 650px) {
+    gap: 1rem;
+  }
 }
 
 .main-layout > * {
